# test-windows-ci

./: .gitignore  CMakeLists.txt  test.cpp
.github/workflows/: continuous.yml
